JDK en getfirst aangepast